[package]
name = "sylvan"
version = "0.0.1"
edition = "2021"

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bootloader = "0.9.23"                                           # Latest working version
uart_16550 = "0.3.0"
volatile = "0.2.6"                                              # Latest working version
x86_64 = "0.14.11"
spin = "0.9.8"

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33
test-timeout = 300 # 5 minutes
