[package]
name = "sylvan"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "sylvan"
path = "src/os/main.rs"

[lib]
name = "sylvan_shared"
path = "src/shared/lib.rs"

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
rand = { version = "0.8.4", default-features = false, features = ["small_rng"] }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
arrayvec = { version = "0.7.4", default-features = false }
bootloader = "0.9.23"                                                            # Latest working version
uart_16550 = "0.3.0"
volatile = "0.3.0"                                                               # Latest working version
pic8259 = "0.10.4"
x86_64 = "0.14.11"
spin = "0.9.8"
pc-keyboard = "0.7.0"

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
run-args = ["-serial", "stdio"]
test-success-exit-code = 33
test-timeout = 300 # 5 minutes
